--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
             <div class="output-container">
                 <text class="output">42.5</text>
             </div>
-            <button class="ac-btn btn"><p>AC</p></button>
-            <button class="ce-btn btn"><p>CE</p></button>
-            <button class="percent-btn btn"><p>%</p></button>
-            <button class="divide-btn"><p>&#247</p></button>
-            <button class="7-btn"><p>7</p></button>
-            <button class="8-btn"><p>8</p></button>
-            <button class="9-btn"><p>9</p></button>
-            <button class="multiply-btn"><p>X</p></button>
-            <button class="4-btn"><p>4</p></button>
-            <button class="5-btn"><p>5</p></button>
-            <button class="6-btn"><p>6</p></button>
-            <button class="subtract-btn"><p>-</p></button>
-            <button class="1-btn"><p>1</p></button>
-            <button class="2-btn"><p>2</p></button>
-            <button class="3-btn"><p>3</p></button>
-            <button class="addition-btn"><p>+</p></button>
-            <button class="0-btn"><p>0</p></button>
-            <button class="dp-btn"><p>.</p></button>
-            <button class="equals-btn"><p>=</p></button>
+            <button class="clear-btn"><p>AC</p></button>
+            <button class="clear-btn"><p>CE</p></button>
+            <button class="operator-btn"><p>%</p></button>
+            <button class="operator-btn"><p>&#247</p></button>
+            <button class="number-btn"><p>7</p></button>
+            <button class="number-btn"><p>8</p></button>
+            <button class="number-btn"><p>9</p></button>
+            <button class="operator-btn"><p>x</p></button>
+            <button class="number-btn"><p>4</p></button>
+            <button class="number-btn"><p>5</p></button>
+            <button class="number-btn"><p>6</p></button>
+            <button class="operator-btn"><p>-</p></button>
+            <button class="number-btn"><p>1</p></button>
+            <button class="number-btn"><p>2</p></button>
+            <button class="number-btn"><p>3</p></button>
+            <button class="operator-btn"><p>+</p></button>
+            <button class="number-btn"><p>0</p></button>
+            <button class="number-btn"><p>.</p></button>
+            <button class="evaluate-btn"><p>=</p></button>
 
         </div>
         
-        <script src="calculator.css"></script>
+        <script src="calculator.js"></script>
     </body>
 </html>
 
