--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
         <div class="calc-container">
             <div class="output-container">
-                <text class="output">42.5</text>
+                <text class="output">0</text>
             </div>
             <button class="clear-btn"><p>AC</p></button>
             <button class="clear-btn"><p>CE</p></button>
-            <button class="operator-btn"><p>%</p></button>
+            <button class="operator-btn-null"><p>%</p></button>
             <button class="operator-btn"><p>&#247</p></button>
             <button class="number-btn"><p>7</p></button>
             <button class="number-btn"><p>8</p></button>
@@ -31,7 +31,7 @@
             <button class="number-btn"><p>1</p></button>
             <button class="number-btn"><p>2</p></button>
             <button class="number-btn"><p>3</p></button>
-            <button class="operator-btn"><p>+</p></button>
+            <button class="operator-btn addition-btn"><p>+</p></button>
             <button class="number-btn"><p>0</p></button>
             <button class="number-btn"><p>.</p></button>
             <button class="evaluate-btn"><p>=</p></button>
